Updated index.html and senseharmony.html
Removed timeline section. Made some text changes on index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Work<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
@@ -79,7 +79,7 @@
 		<div class="row">
 			<div class="col-12">
 				<h1 class="text-center" style="font-weight: bold;">
-					Portfolio
+					Selected Projects
 				</h1>
 			</div>
 		</div>
@@ -93,8 +93,10 @@
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
 					Ever felt like sensory overload could use a pause button? Meet SenseHarmony, a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets.
 				</p>
-				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">iOS and Android app</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: Mobile</span>
+
+				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> User Research (Interviews, Questionnaire), Wireframing, Prototyping, Usability Testing.</p>
 				<div>
 					<a href="senseharmony.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
@@ -116,9 +118,12 @@
 					For those who like their household’s well-being measured as much as their Netflix hours, FitShare is an interactive fitness hub that visualises health metrics and recommends personalised activities.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Desktop</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Web and Mobile (Cross-Platform)</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: TV</span>
+
+				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> User Research, Co-designing, Prototyping, Usability Testing, Heuristic Evaluation.</p>
 				<div>
-					<a href="fitshare.html" class=" my-3 py-2 btn btn-primary button-portfolio">
+					<a href="fitshare.html" class=" my-1 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
@@ -138,7 +143,10 @@
 					Because what’s an Archaeology Museum without a dash of poetic mystery? RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. Here, visitors can craft Haikus inspired by the artefacts on display. Who knew history could rhyme?”
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: iPad</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">iOS app</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: iPad</span>
+
+				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: black;"><b>Skills: </b>Stakeholder Engagement, Wireframing, Prototyping, Collaborative Design, UI Design.</p>
 				<div>
 					<a href="relicrhymes.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
@@ -175,7 +183,7 @@
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
-			strings : ["an Interaction Designer.","a UX Researcher.", "an Artist.", "a Cooking Enthusiast."],
+			strings : ["an Interaction Designer.","a UX Researcher.", "an Artist."],
 			typeSpeed: 60,
 			backSpeed: 60,
 			loop: true,
