--- a/senseharmony.html
+++ b/senseharmony.html
@@ -183,7 +183,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid reveal" style="font-weight: bold;">
+			<!-- <div class="container-fluid reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="underline col-sm-12 mt-2 text-center">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Project Timeline
@@ -195,7 +195,7 @@
 							style="width: 70%;">
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="reveal underline container-fluid" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
