--- a/my-art.html
+++ b/my-art.html
@@ -36,7 +36,7 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/#portfolio-section">Projects<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Work<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
