--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					I'm <span class="auto-type"></span>
 				</h1>
 				<p class="hero-subtext" style="font-style: normal;">
-					A UX designer, self-proclaimed problem solver, and professional overthinker (especially when it comes to wireframes 🤯). If you’re looking for digital experiences crafted with empathy and creativity, you’re in the right place.
+					A UX designer with a background in computer science and a Master’s in Human-Computer Interaction. I have two years of experience crafting user-centred digital products with empathy and strategy. I enjoy solving meaningful problems and bridging the gap between design and development to build intuitive, accessible experiences.
 					Dive in and explore my work.
 				</p>
 				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
