Updated fitshare.html and drelicrhymes.html
Added learnings sections for each case study at the end.

--- a/fitshare.html
+++ b/fitshare.html
@@ -68,10 +68,10 @@
 							style="font-weight: 350; font-size: 21px; font-style: italic; color: white;">For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.						</p>
 						<!-- <h5 style="color: #ffba08; font-weight: 600;"> MSc Dissertation Project </h5> -->
 						<h5 style="color: #DDDF00; font-weight: 600;"> Project Duration: <span
-								style="font-weight: 500; color: whitesmoke;"> 3 months (July 2024 - September 2024)</span>
+								style="font-weight: 500; color: whitesmoke;"> 3 months</span>
 						</h5>
-						<h5 style="color: #DDDF00; font-weight: 600;"> Platform: <span
-								style="font-weight: 500; color: whitesmoke;"> Monitor</span>
+						<h5 style="color: #DDDF00; font-weight: 600;"> Role <span
+								style="font-weight: 500; color: whitesmoke;">UI/UX Designer</span>
 						</h5>
 					</div>
 					<div class="col-sm-5 text-center">
@@ -495,6 +495,47 @@
 					</div>
 					<div class="underline col-sm-5 my-3 py-5 text-center">
 						<img src="images/fitshareconclusion.svg" class="project-image w-75 img-fluid" alt="Responsive image">
+					</div>
+				</div>
+			</div>
+			<div class="reveal container-fluid">
+				<div class="row">
+					<div class="underline col-sm-12 my-5 hero-text text-center">
+						<span style="font-size: 35px; font-weight: 800; color: #212529;">What I Learned
+							<hr class="mt-2 text-center" style="width: 9%; border-top: 4px solid #29489b; border-radius: 20px;">
+						</span>
+						<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+							Designing FitShare reinforced the importance of user-centred thinking at every stage—from research to iteration. Here are my key takeaways:</p>
+						<div class="project-1-para row mx-5 px-3 g-4">
+							<div class="col-sm-6 my-3 hero-text text-left">
+								<ol class="fitshare-ol">
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Involve users early: Co-designing through interviews and brainstorming led to insights that wouldn’t have emerged from assumptions alone.​</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span
+											style="font-weight: 400; font-size: 20px;">Context matters: Conducting Context-of-Use Analysis helped align the design with real-world environments, constraints, and diverse household dynamics.</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Break down complexity: HTA allowed us to simplify tasks and reveal interdependencies that improved the user flow.</span>
+									</li>
+								</ol>
+							</div>
+							<div class="col-sm-6 my-3 hero-text text-left">
+								<ol class="fitshare-ol" start="4">
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Prioritise usability over features: Heuristic Evaluation showed that even small UI changes (like clearer icons or tooltips) have a big impact on the user experience.</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span
+											style="font-weight: 400; font-size: 20px;">Balance shared vs. personal needs: Designing for households means offering customisation, privacy, and inclusivity in a shared space.</span>
+									</li>
+									<!-- <li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Working within time limits taught me to prototype early and iterate fast.</span>
+									</li> -->
+								</ol>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
