--- a/relicrhymes.html
+++ b/relicrhymes.html
@@ -216,7 +216,7 @@
 					<div class="col-sm-6 mb-3 text-left">
 						<ol>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
-								<span style="font-weight: 600; font-size: 21px; color: #ffba08;">Requirements
+								<span style="font-weight: 600; font-size: 21px; color: #212529;">Requirements
 									Gathering</span>
 								<br>To begin, we collaborated with the Keeper of the University of Nottingham
 								Archaeology Museum to gain a deep understanding of the museum’s needs and the
@@ -226,7 +226,7 @@
 								level.
 							</li>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
-								<span style="font-weight: 600; font-size: 20px; color: #ffba08;">Stakeholder
+								<span style="font-weight: 600; font-size: 20px; color: #212529;">Stakeholder
 									Engagement</span>
 								<br>Engaging with museum staff and key stakeholders allowed us to explore possibilities
 								for enhancing visitor engagement. These discussions shaped our understanding of the
@@ -420,6 +420,47 @@
 						</div>
 					</div>
 				</div>
+				<div class="reveal container-fluid">
+				<div class="row">
+					<div class="underline col-sm-12 my-5 hero-text text-center">
+						<span style="font-size: 35px; font-weight: 800; color: #212529;">What I Learned
+							<hr class="mt-2 text-center" style="width: 9%; border-top: 4px solid #ffba08; border-radius: 20px;">
+						</span>
+						<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+							Working on RelicRhymes gave me a deeper appreciation for how thoughtful interaction design can transform passive environments into collaborative experiences. I learned how to:</p>
+						<div class="project-1-para row mx-5 px-3 g-4">
+							<div class="col-sm-6 my-3 hero-text text-left">
+								<ol class="results-ol">
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Communicate ideas effectively to stakeholders, and incorporate feedback early to align design goals with real user needs.​</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span
+											style="font-weight: 400; font-size: 20px;">Connecting theory to real-world design decisions to enhance user collaboration and engagement.</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Design within constraints, including physical space limitations and time-bound academic schedules, while still delivering a complete experience.</span>
+									</li>
+								</ol>
+							</div>
+							<div class="col-sm-6 my-3 hero-text text-left">
+								<ol class="results-ol" start="4">
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Translate abstract concepts into tangible prototypes, especially when designing for public, co-located interactions.</span>
+									</li>
+									<li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span
+											style="font-weight: 400; font-size: 20px;">Balance creativity with structure by creating a system that encourages artistic freedom while maintaining usability.</span>
+									</li>
+									<!-- <li class="mb-3" style="font-size: 20px; font-weight: 400;">
+										<span style="font-weight: 400; font-size: 20px;">Working within time limits taught me to prototype early and iterate fast.</span>
+									</li> -->
+								</ol>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 				<div class="underline container-fluid" style="font-weight: bold;">
 					<div class="row px-4 mx-4 project-1-para">
 						<div class="col-sm-6 my-5 py-2 hero-text text-center">
