--- a/relicrhymes.html
+++ b/relicrhymes.html
@@ -70,11 +70,10 @@
 							invites the visitors to collectively craft Haikus which are inspired by the artefacts
 							displayed in the museum.</p>
 						<h5 style="color: #29489b; font-weight: 600;"> Project Duration: <span
-								style="font-weight: 500; color: #403d39;"> 3 months (October 2024 - December
-								2024)</span>
+								style="font-weight: 500; color: #403d39;"> 3 months </span>
 						</h5>
-						<h5 style="color: #29489b; font-weight: 600;"> Platform: <span
-								style="font-weight: 500; color: #403d39;"> Monitor</span>
+						<h5 style="color: #29489b; font-weight: 600;">Role:<span
+								style="font-weight: 500; color: #403d39;"> UI/UX Designer</span>
 						</h5>
 					</div>
 					<div class="col-sm-5 text-center">
