--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 					I'm <span class="auto-type"></span>
 				</h1>
 				<p class="hero-subtext" style="font-style: normal;">
-					A UX designer with a background in computer science and a Master’s in Human-Computer Interaction. I have two years of experience crafting user-centred digital products with empathy and strategy. I enjoy solving meaningful problems and bridging the gap between design and development to build intuitive, accessible experiences.
-					Dive in and explore my work.
+					I have a background in Computer Science and a Master’s in Human-Computer Interaction with 2 years of experience designing user-centred digital products with empathy. I am currently volunteering as a UX Designer at Empowered Vote.</span>
+					<br>Dive in and explore my work.
 				</p>
 				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
 					Work with me
@@ -84,6 +84,29 @@
 			</div>
 		</div>
 	  </div>
+	    <div class="container my-5  portfolio-1 reveal" style="background-color: #23606E;">
+		<div class="row">
+			<div class="col-sm-6 px-5 py-5">
+				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
+					Empowered Compass - Civic Compass
+				</h2>
+				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
+					An interactive feature that helps users map their stances on key civic issues against political leaders promoting understanding, shared values, and healthier civic dialogue through visual comparison.
+				</p>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Web-based Tool</span>
+
+				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> UX Design, Prototyping, Wireframing.</p>
+				<div>
+					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					View Project
+				</a>
+				</div>
+			</div>
+			<div class="col-sm-6 my-5">
+				<img src="images/empoweredvote.png" class="w-100 img-fluid" alt="Responsive image">
+			</div>
+		</div>
+	  </div>
 	  <div class="container my-5  portfolio-1 reveal">
 		<div class="row">
 			<div class="col-sm-6 px-5 py-5">
@@ -94,7 +117,6 @@
 					Ever felt like sensory overload could use a pause button? Meet SenseHarmony, a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets.
 				</p>
 				<span class="badge px-2 py-2 my-2 mr-2 read-time">iOS and Android app</span>
-				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: Mobile</span>
 
 				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> User Research (Interviews, Questionnaire), Wireframing, Prototyping, Usability Testing.</p>
 				<div>
@@ -103,7 +125,7 @@
 				</a>
 				</div>
 			</div>
-			<div class="col-sm-6 px-1 py-1">
+			<div class="col-sm-6 my-5">
 				<img src="images/Frame 9.png" class="w-100 img-fluid" alt="Responsive image">
 			</div>
 		</div>
@@ -118,8 +140,7 @@
 					For those who like their household’s well-being measured as much as their Netflix hours, FitShare is an interactive fitness hub that visualises health metrics and recommends personalised activities.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mr-2 read-time">Web and Mobile (Cross-Platform)</span>
-				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: TV</span>
+				<span class="badge px-2 py-2 my-2 mr-2 read-time">Web app</span>
 
 				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> User Research, Co-designing, Prototyping, Usability Testing, Heuristic Evaluation.</p>
 				<div>
@@ -144,7 +165,7 @@
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mr-2 read-time">iOS app</span>
-				<span class="badge px-2 py-2 my-2 mr-2 read-time">Device: iPad</span>
+				<!-- <span class="badge px-2 py-2 my-2 mr-2 read-time">Device: iPad</span> -->
 
 				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: black;"><b>Skills: </b>Stakeholder Engagement, Wireframing, Prototyping, Collaborative Design, UI Design.</p>
 				<div>
