--- a/empowered-vote.html
+++ b/empowered-vote.html
@@ -189,6 +189,10 @@
 								<span style="font-weight: 400; font-size: 21px; color: #212529;">Enabling comparison
 									with politicians and other participants.</span>
 							</li>
+						</ol>
+					</div>
+					<div class="col-sm-6 my-4 hero-text text-left">
+						<ol start="4">
 							<li class="mb-2">
 								<span style="font-weight: 400; font-size: 21px; color: #212529;">Presenting political
 									information clearly and accessibly.</span>
@@ -198,8 +202,6 @@
 									engagement and understanding of civic issues.</span>
 							</li>
 						</ol>
-					</div>
-					<div class="col-sm-6 my-4 hero-text text-left">
 					</div>
 				</div>
 			</div>
@@ -283,7 +285,7 @@
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
-					<div class="col-sm-6 mb-3 text-left">
+					<div class="col-sm-6 mb-3 text-left d-flex align-items-center">
 						<ol>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #212529;">Stakeholder
@@ -299,8 +301,8 @@
 							</li>
 						</ol>
 					</div>
-					<div class="col-sm-6 py-4 text-left d-flex align-items-center justify-content-center">
-						<img src="images/" class="project-image img-fluid" alt="Notes from the UX Review">
+					<div class="col-sm-6 py-0 text-left d-flex align-items-top justify-content-center">
+						<img src="images/empoweredv_notes_from_stakeholderconvo.jpg" class="project-image img-fluid" alt="Notes from the UX Review">
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
@@ -323,7 +325,10 @@
 						</ol>
 					</div>
 					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
-						<img src="images/" class="project-image img-fluid" alt="Old UX screens">
+						<figure>
+							<img src="images/empoweredv_old_ux.png" class="project-image img-fluid" alt="Old UX screens">
+							<figcaption class="mt-4">Old UX Screens</figcaption>
+						</figure>
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
@@ -332,7 +337,7 @@
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 20px; color: #212529;">Reviewing Existing
 									Design Assets</span>
-								<br>I explored the existing Figma files, prototypes, and design documentation to
+								<br>I explored the existing Figma files, and design documentation to
 								understand the product’s structure and constraints. This review helped establish how
 								much of the foundation could be reused and which elements required redesigning from
 								scratch. It also clarified the workflow between designers, developers, and stakeholders,
@@ -340,8 +345,11 @@
 							</li>
 						</ol>
 					</div>
-					<div class="col-sm-6 py-4 text-left d-flex align-items-center justify-content-center">
-						<img src="images/" class="project-image img-fluid" alt="Figma Files, design docs">
+					<div class="col-sm-6 py-4 text-center d-flex align-items-top justify-content-center">
+						<figure>
+						<img src="images/exisitng_design_assets.png" class="project-image img-fluid w-75" alt="Figma Files, design docs">
+						<figcaption class="mt-4">Existing Figma Assets</figcaption>
+						</figure>
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
@@ -412,8 +420,8 @@
 						</ol>
 						</p>
 					</div>
-					<div class="col-sm-6 py-4 text-left d-flex align-items-center">
-						<img src="" class="project-image img-fluid"
+					<div class="col-sm-6 py-4 text-center d-flex align-items-top">
+						<img src="/images/empoweredv_design_goals.svg" class="project-image img-fluid w-75"
 							alt="illustration of the word Design Goals or something ">
 					</div>
 				</div>
@@ -479,7 +487,7 @@
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
-					<div class="col-sm-6 mb-3 text-left">
+					<div class="col-sm-6 mb-3 text-left align-items-center">
 						<ul>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #202020;">1st Iteration:
@@ -498,6 +506,18 @@
 									instantly.
 								</p>
 							</li>
+						</ul>
+					</div>
+					<div class="col-sm-6 py-0 text-center d-flex align-items-top justify-content-center" style="flex-direction: column;">
+						<figure>
+							<img src="images/1st_iteration_1.png" class="project-image img-fluid w-75" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">1st iteration with simplified survey</figcaption>
+						</figure>
+					</div>
+				</div>
+				<div class="project-1-para row mx-5 px-3 g-4">
+					<div class="col-sm-6 mb-3 text-left d-flex align-items-center">
+						<ul>
 							<li class="mb-2" style="list-style-type: square; font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #23606E;">What lead to the next interation?</span>
 								<br>Engaging with museum staff and key stakeholders allowed us to explore possibilities
@@ -507,19 +527,15 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
+					<div class="col-sm-6 py-0 text-center d-flex align-items-top justify-content-center" style="flex-direction: column;">
 						<figure>
-							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>1st iteration with simplified sruvey and graph</figcaption>
-						</figure>
-						<figure>
-							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>1st iteration with simplified sruvey and graph</figcaption>
+							<img src="images/1st_iteration_2.png" class="project-image img-fluid w-75" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">1st iteration with graph</figcaption>
 						</figure>
 					</div>
 				</div>
-				<div class="project-1-para row mx-5 px-3 g-4">
-					<div class="col-sm-6 mb-3 text-left">
+				<div class="project-1-para row mx-5 px-3 py-4 g-4">
+					<div class="col-sm-6 mb-3 text-left d-flex align-items-center">
 						<ul>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #202020;">2nd Iteration:
@@ -540,10 +556,14 @@
 							</li>
 						</ul>
 					</div>
-					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
+					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center" style="flex-direction: column;">
 						<figure>
-							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>1st iteration with simplified sruvey and graph</figcaption>
+							<img src="/images/2nd_iteration_1.png" class="project-image img-fluid w-75" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">1st iteration with simplified survey and graph</figcaption>
+						</figure>
+						<figure>
+							<img src="/images/2nd_iteration_2.png" class="project-image img-fluid w-75" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">1st iteration with simplified survey and graph</figcaption>
 						</figure>
 					</div>
 				</div>
@@ -584,21 +604,24 @@
 								especially in how the graph and stance spectrum coexisted.
 								These insights guided the next iteration, where the focus shifted to harmonising layout,
 								improving accessibility, and introducing features like the Invert Scale toggle for perspective diversity.
+								This iteration represented the most balanced version of Civic Compass so far which is visually engaging, accessible, and
+								aligned with Empowered Vote’s mission. The A/B testing phase is currently being planned
+								to validate which spectrum style (numeric or notched) better supports clarity and engagement.
 							</li>
 						</ul>
 					</div>
-					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
+					<div class="col-sm-6 py-0 text-center d-flex align-items-top justify-content-center" style="flex-direction: column;">
 						<figure>
-							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>Version A: With Numbers</figcaption>
+							<img src="/images/3rd_iteration_vA.png" class="project-image img-fluid w-75" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">Version A: With Numbers</figcaption>
 						</figure>
 						<figure>
-							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>Version B: With Notches</figcaption>
+							<img src="/images/3rd_iteration_vB.png" class="project-image img-fluid w-75 mt-5" alt="1st iteration with simplified sruvey and graph">
+							<figcaption class="mt-4">Version B: With Notches</figcaption>
 						</figure>
 					</div>
 				</div>
-				<div class="project-1-para row mx-5 px-3 g-4">
+				<!-- <div class="project-1-para row mx-5 px-3 g-4">
 					<div class="col-sm-6 mb-3 text-left">
 						<ul>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
@@ -610,7 +633,7 @@
 									In this phase, I focused on bringing all insights together into a cohesive, accessible,
 									and inclusive experience. The spider graph was repositioned to the left for better visual hierarchy,
 									while stance controls remained on the right. An Invert Scale button was added, allowing users
-									to flip their visual perspective — a feature suggested during stakeholder discussions to symbolise
+									to flip their visual perspective, a feature suggested during stakeholder discussions to symbolise
 									empathy and open-mindedness in civic engagement.
 								</p>
 							</li>
@@ -626,10 +649,10 @@
 					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
 						<figure>
 							<img src="" class="project-image img-fluid" alt="1st iteration with simplified sruvey and graph">
-							<figcaption>Invert scale with changed graph position.</figcaption>
+							<figcaption class="mt-4">Invert scale with changed graph position.</figcaption>
 						</figure>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<div class="underline container-fluid reveal" style="font-weight: bold; background-color: #FFFF;">
 				<div class="row">
@@ -641,7 +664,7 @@
 					</div>
 				</div>
 				<div class="project-1-para row mx-5 px-3 g-4">
-					<div class="col-sm-6 mb-3 text-left">
+					<div class="col-sm-6 mb-3 text-left d-flex align-items-center">
 						<ul>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #212529;">Redesigning the Comparison Screen</span>
@@ -666,15 +689,13 @@
 							</ul>
 						</ul>
 					</div>
-					<div class="col-sm-6 py-4 text-center d-flex align-items-center justify-content-center">
+					<div class="col-sm-6 py-4 text-center d-flex align-items-top justify-content-center" style="flex-direction: column;">
 						<figure>
-							<img src="" class="project-image img-fluid"
-							alt="Before version of compare screen">
+							<img src="/images/empoweredv_old_ux.png" class="project-image img-fluid w-75" alt="Before version of compare screen">
 							<figcaption>Before version of compare screen</figcaption>
 						</figure>
 						<figure>
-							<img src="" class="project-image img-fluid"
-							alt="After version of compare screen">
+							<img src="/images/4th_iteration_comparison.png" class="project-image img-fluid w-75" alt="After version of compare screen">
 							<figcaption>After version of compare screen</figcaption>
 						</figure>
 					</div>
