--- a/empowered-vote.html
+++ b/empowered-vote.html
@@ -288,8 +288,7 @@
 					<div class="col-sm-6 mb-3 text-left d-flex align-items-center">
 						<ol>
 							<li class="mb-2" style="font-size: 20px; font-weight: 400;">
-								<span style="font-weight: 600; font-size: 21px; color: #212529;">Stakeholder
-									Conversations</span>
+								<span style="font-weight: 600; font-size: 21px; color: #212529;">Stakeholder Conversations</span>
 								<br>The process began with a series of stakeholder conversations to understand the
 								vision for the Compass and identify the pain points that needed immediate attention.
 								These discussions revealed a shared frustration with the existing experience, users were
