--- a/senseharmony.html
+++ b/senseharmony.html
@@ -584,6 +584,42 @@
 				</div>
 			</div>
 			</div>
+			<div class="reveal container-fluid">
+				<div class="row">
+					<div class="underline col-sm-12 my-5 hero-text text-center">
+						<span style="font-size: 35px; font-weight: 800; color: #334436;">Read the Research Paper
+							<hr class="mt-2 text-center" style="width: 9%; border-top: 4px solid #DA6B4C; border-radius: 20px;">
+						</span>
+						<div class="project-1-para row mx-5 px-5 py-5 g-4" style = "background-color: #F8F8F8; border: 2px solid #aa4465; border-radius: 10px;">
+							<div class="col-sm-6 my-3 hero-text text-left d-flex align-items-left justify-content-center" style="flex-direction: column;">
+								<p class="text-left" style="font-weight: 600; font-size: 26px; color: #212529;">
+									Exploring and Understanding Neurodiverse Sensory Experiences and Management Through Digital Intervention
+								</p>
+								<p class="text-left" style="font-weight: 400; font-size: 21px; color: #212529;">
+									Radhika Joglekar, Gail Hopkins
+								</p>
+								<p class="text-left" style="font-weight: 400; font-size: 18px; color: #212529;">
+									Sensory processing and regulation have garnered particular focus by professionals when recommending
+									interventions to help neurodivergent individuals.....
+								</p>
+								<button class="view-next-project py-2" style="width: max-content;">
+									<a href="https://openaccess.cms-conferences.org/publications/book/978-1-964867-73-1/article/978-1-964867-73-1_2" target="_blank">
+										<h4 style="font-size: 21px; font-weight: 500; color: white;" class="pb-0 mb-0">
+											View Paper <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right" stroke="white" stroke-width="1" viewBox="0 0 16 16">
+												<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+											</svg>
+										</h4>
+									</a>
+								</button>
+							</div>
+							<div class="col-sm-6 my-3 hero-text text-center">
+								<img src="images/sensory_preferences_paper.jpg" class="project-image img-fluid"
+							alt="Responsive image">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<!-- <div class="reveal container-fluid">
 				<div class="row">
 					<div class="underline col-sm-12 mt-5 text-center">
