Updated all files
Changed the navigation bar names for Art and Projects. Linked empowered vote case study to the blurb on homepage. Added minor margins at the bottom for the image grids on digital art, sketches and pen drawings and watercolour pages.

--- a/fitshare.html
+++ b/fitshare.html
@@ -35,10 +35,10 @@
 			<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 				<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="/#portfolio-section">Work<span class="sr-only"></span></a>
+						<a class="nav-link" href="/#portfolio-section">Projects<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
+						<a class="nav-link" href="/my-art.html">Art<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
 						<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span
