--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/#portfolio-section">Work<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Projects<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
@@ -97,7 +97,7 @@
 
 				<p class="py-3 my-0" style="font-weight: 400; font-size: 16px; color: #fdfffc;"><b>Skills:</b> UX Design, Prototyping, Wireframing.</p>
 				<div>
-					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
+					<a href="empowered-vote.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
