--- a/my-art-pen-drawings.html
+++ b/my-art-pen-drawings.html
@@ -36,10 +36,10 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/#portfolio-section">Work<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Projects<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
@@ -67,7 +67,7 @@
 		</div>
 	</div>
 	<div class="container-fluid my-2 underline" style="font-weight: bold;">
-		<div class="row px-4 mx-4 project-1-para d-flex">
+		<div class="row px-4 mx-4 pb-4 my-2 project-1-para d-flex">
 			<div class="col-sm-4 my-2 text-center">
 				<a href="/images/pendrawings1.png" data-toggle="lightbox" data-gallery="example-gallery">
 					<img src="/images/pendrawings1.png" class="img-fluid">
