--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
+			<a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -65,7 +65,7 @@
 					I have a background in Computer Science and a Master’s in Human-Computer Interaction with 2 years of experience designing user-centred digital products with empathy. I am currently volunteering as a UX Designer at Empowered Vote.</span>
 					<br>Dive in and explore my work.
 				</p>
-				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
+				<a href="https://radhikajoglekar1231@gmail.com" target="_blank" class="btn btn-primary btn-arrow button">
 					Work with me
 				</a>
 			</div>
