Updated all pages
Updated "Work with me" link on nav bar for every page.

--- a/my-art-digital-art.html
+++ b/my-art-digital-art.html
@@ -45,7 +45,7 @@
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
+				<a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
