--- a/empowered-vote.html
+++ b/empowered-vote.html
@@ -518,10 +518,8 @@
 						<ul>
 							<li class="mb-2" style="list-style-type: square; font-size: 20px; font-weight: 400;">
 								<span style="font-weight: 600; font-size: 21px; color: #23606E;">What lead to the next interation?</span>
-								<br>Engaging with museum staff and key stakeholders allowed us to explore possibilities
-								for enhancing visitor engagement. These discussions shaped our understanding of the
-								museum's goals and laid the groundwork for an interactive system that would encourage
-								collaboration and creativity among visitors.
+								<br>While this version improved usability, feedback showed users still wanted more personal expression
+								beyond predefined choices. This inspired the idea for a Write Your Own Stance feature in the next iteration.
 							</li>
 						</ul>
 					</div>
