--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 				<a class="nav-link" href="assets/Radhika_Joglekar_UI_UX_Designer.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
+			<!-- <a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a> -->
+			 <a class="nav-link"  href="https://mail.google.com" target="_blank"  rel="noopener noreferrer">Work with me</a>
+
 			</li>
 		  </ul>
 		</div>
