--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			  </li>
 			<li class="nav-item active px-2">
 			<!-- <a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a> -->
-			 <a class="nav-link" href="https://mail.google.com" target="_blank" rel="noopener noreferrer">Work with me</a>
+			 <a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com">Work with me</a>
 			</li>
 		  </ul>
 		</div>
