Updated all files
Updated the "work with me" link for all files.

--- a/senseharmony.html
+++ b/senseharmony.html
@@ -45,7 +45,7 @@
 								class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
+						<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank" rel="noopener noreferrer">Work with me</a>
 					</li>
 				</ul>
 			</div>
@@ -92,8 +92,8 @@
 									</span>
 									<p class="project-1-para text-left mx-5 px-5"
 										style="font-weight: 400; font-size: 20px; color: #212529;"> <b><span style="color: #DA6B4C;">Problem</span></b> <br>
-										We all react to sights, sounds, and textures differently—sometimes craving them, s
-										ometimes feeling overwhelmed—but most don’t realise how these affect our well-being.
+										We all react to sights, sounds, and textures differently sometimes craving them, s
+										ometimes feeling overwhelmed but most don’t realise how these affect our well-being.
 										While tools exist for children or adults with ASD or ADHD, there’s little support for
 										the general adult population to manage these sensory challenges.
 									</p>
