--- a/empowered-vote.html
+++ b/empowered-vote.html
@@ -45,7 +45,7 @@
 								class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="https://radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
+						<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank" rel="noopener noreferrer">Work with me</a>
 					</li>
 				</ul>
 			</div>
